--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://GabrielDSantos.github.io/FENT-master",
+  "homepage": "https://cronograma.fenteducacao.com.br",
   "name": "calendario-curricular",
   "version": "0.1.0",
   "private": true,
